# homeo-mahanagar-label-printer

./: .gitignore  .gitignore.bak.20251120141929  HomeoLabelPrinter.spec  README.md  __init__.py.bak  __main__.py.bak  build_exe.ps1  conftest.py  homeo_label_printer_font_9_scaled.py  homeo_label_printer_font_9_scaled.spec  pyproject.toml  requirements.txt  setup_package.ps1
.github/workflows/: ci.yml
data/: records_broken_file.txt  remedies_database.csv  remedies_database.json
homeo-label-installer/: README.md  pyproject.toml  requirements.txt  setup.cfg
homeo-label-installer/build_scripts/: build_exe.ps1  build_exe.sh
homeo-label-installer/installers/windows/: installer.nsi
homeo-label-installer/pyinstaller/: homeo_label.spec
homeo-label-installer/resources/: license.txt
homeopathy-name-search-app/: README.md  buildozer.spec  homeopathy_name_search_app.py  requirements.txt
installer/: homeo_installer.iss
src/homeolabel/: __init__.py  __main__.py  app.py  app.py.bak.20251120141841
tests/: conftest.py  test_gui__tests.py  test_utils__tests.py
