[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "homeo-label-printer"
version = "0.1.0"
description = "A Homeopathy Label Generator application."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.15.4"
pandas = "^1.2.0"
openpyxl = "^3.0.7"
reportlab = "^3.5.59"
win32print = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"