[metadata]
name = homeo-label
version = 1.0.0
description = A Homeopathy Label Generator application.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/homeo-label
license = MIT

[options]
packages = find:
install_requires =
    PyQt5
    pandas
    openpyxl
    reportlab

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    homeo-label = homeo_label_printer_font_9_scaled:main

[options.extras_require]
dev =
    pytest
    flake8
    black

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"